--- a/login-electrolights.html
+++ b/login-electrolights.html
@@ -1,52 +1,150 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat | Electrolights</title>
-</head>
-<body>
-    <div class="container">
-        <div id="chatBox"></div>
-        <input type="text" id="nameInput" placeholder="Your Name">
-        <input type="text" id="messageInput" placeholder="Type your message...">
-        <button id="sendButton">Send</button>
-    </div>
+    <title>Login | Electrolights</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #333;
+            color: #fff;
+        }
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-        const socket = io();
+        .login-container {
+            position: absolute;
+            top: 50px;
+            left: 50%;
+            transform: translateX(-50%);
+            max-width: 400px;
+            padding: 20px;
+            background-color: rgba(0, 0, 0, 0.8);
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            text-align: center;
+        }
 
-        // Function to send a message
-        function sendMessage() {
-            const name = document.getElementById("nameInput").value;
-            const message = document.getElementById("messageInput").value;
-            if (name && message) {
-                const data = { name, message };
-                socket.emit('message', data); // Send the message to the server
-            } else {
-                alert("Please enter your name and message.");
+        .login-animation {
+            margin-top: -50px; /* Adjust the margin to move the animation up */
+            font-size: 24px;
+            color: #fff;
+        }
+
+        @keyframes slideIn {
+            from {
+                opacity: 0;
+                transform: translate(-50%, -100%);
+            }
+            to {
+                opacity: 1;
+                transform: translate(-50%, 0);
             }
         }
 
-        // Function to display a message
-        function displayMessage(data) {
-            const chatBox = document.getElementById("chatBox");
-            const messageElement = document.createElement("div");
-            messageElement.textContent = `${data.name} (${data.date}): ${data.message}`;
-            chatBox.appendChild(messageElement);
+        input[type="text"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: none;
+            border-radius: 5px;
+            background-color: #444;
+            color: #fff;
         }
 
-        // Event listener for the send button
-        document.getElementById("sendButton").addEventListener("click", sendMessage);
+        input[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            margin-top: 20px;
+            border: none;
+            border-radius: 5px;
+            background-color: #007bff;
+            color: #fff;
+            cursor: pointer;
+        }
 
-        // Event listener for new messages
-        socket.on('message', displayMessage);
+        input[type="submit"]:hover {
+            background-color: #0056b3;
+        }
 
-        // Event listener for chat history
-        socket.on('chatHistory', (chatHistory) => {
-            chatHistory.forEach(displayMessage);
-        });
-    </script>
+        h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .error-message {
+            color: #ff5555;
+            text-align: center;
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+
+<div class="login-container">
+    <div class="login-animation">Login</div>
+    <h2>Login</h2>
+    <form id="loginForm" onsubmit="return validateForm()" method="post">
+        <input type="text" id="username" name="username" placeholder="Username" required>
+        <input type="password" id="password" name="password" placeholder="Password" required>
+        <input type="submit" value="Login">
+    </form>
+    <div class="error-message" id="errorMessage"><?php echo $error_message; ?></div>
+</div>
+
+<script>
+    function validateForm() {
+        var username = document.getElementById("username").value;
+        var password = document.getElementById("password").value;
+
+        if (username === "nilan" && password === "nilan1234") {
+            // Redirect to nilan-login.html
+            window.location.href = "nilan-login.html";
+            return false; // Prevent form submission
+        } else if (username === "nithin" && password === "nithin1234") {
+            // Redirect to nithin-login.html
+            window.location.href = "nithin-login.html";
+            return false; // Prevent form submission
+        } else if (username === "howard" && password === "howard1234") {
+            // Redirect to nithin-login.html
+            window.location.href = "howard-login.html";
+            return false; // Prevent form submission
+        } else if (username === "quinn" && password === "quinn1234") {
+            // Redirect to nithin-login.html
+            window.location.href = "quinn-login.html";
+            return false; // Prevent form submission
+        } else if (username === "yesh" && password === "yesh1234") {
+            // Redirect to nithin-login.html
+            window.location.href = "yesh-login.html";
+            return false; // Prevent form submission
+        } else if (username === "aarav" && password === "aarav1234") {
+            // Redirect to shaurya-login.html
+            window.location.href = "aarav-login.html";
+            return false; // Prevent form submission
+        } else if (username === "shaurya" && password === "shaurya1234") {
+            // Redirect to shaurya-login.html
+            window.location.href = "shaurya-login.html";
+            return false; // Prevent form submission
+        } else if (username === "poovendiran" && password === "poovendiran1234") {
+            // Redirect to poof-login.html
+            window.location.href = "poof-login.html";
+            return false; // Prevent form submission
+        } else if (username === "ashwin" && password === "aswhin1234") {
+            // Redirect to shaurya-login.html
+            window.location.href = "ashwin-login.html";
+            return false; // Prevent form submission
+        } else if (username === "akshaj" && password === "akshaj1234") {
+            // Redirect to shaurya-login.html
+            window.location.href = "akshaj-login.html";
+            return false; // Prevent form submission
+        } else {
+            // Show error message
+            document.getElementById("errorMessage").innerText = "Invalid username or password";
+            return false; // Prevent form submission
+        }
+    }
+</script>
+
 </body>
 </html>
