--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         .about-us-section {
             padding: 40px 0;
             text-align: center;
+            margin-top: 50px; /* Added margin to make space for the navigation link */
         }
 
         .about-us-image {
@@ -81,6 +82,9 @@
 
         /* Style for the navigation link */
         .scroll-to-2024-2025 {
+            position: fixed;
+            top: 20px;
+            right: 20px;
             cursor: pointer;
             color: #fff;
             text-decoration: none;
@@ -127,4 +131,5 @@
 </body>
 
 </html>
+
 
